# sigchat

./: .size-budget.toml  Cargo.toml  README.md  TESTING-PLAN.md  auto_i18n.py  build.sh
.github/actions/setup-xous/: action.yml
.github/scripts/: check_size_budget.py
.github/workflows/: size-budget.yml  size-delta.yml
src/: account.rs  lib.rs  main.rs  manager.rs
src/manager/: account_attrs.rs  libsignal.rs  main_ws.rs  outgoing.rs  prekeys.rs  rest.rs  signal_ws.rs  stores.rs
tests/: README.md
tools/: decode-wire.sh  measure-renode.sh  measure-size.sh  recv-verify.sh  run-all-tests.sh  scan-send.sh  signal-send.sh  test-env.example  test-helpers.sh
